Fixed overflow

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -10,7 +10,7 @@
     &__link {
         display: block;
         color: $color-black;
-        padding: 17px 15px;
+        padding: 16px 15px;
         margin: 0 5px;
         transition: all .2s;
         &:hover {
